# self-healing-browser-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: self_healing_demo.py
src/self_healing_browser_mcp/: __init__.py  engine.py  server.py
tests/: conftest.py  test_engine.py  test_server.py
