[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "self-healing-browser-mcp"
version = "0.1.0"
description = "An MCP server that gives AI agents a real browser to drive, with self-healing locators."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Raju Shanigarapu" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "playwright",
  "browser-automation",
  "ai-agents",
  "self-healing",
  "testing",
  "qa",
  "llm",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Testing",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
]
dependencies = [
  "mcp>=1.2.0",
  "playwright>=1.48",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
self-healing-browser-mcp = "self_healing_browser_mcp.server:main"

[project.urls]
Homepage = "https://github.com/RAJUSHANIGARAPU/self-healing-browser-mcp"
Issues = "https://github.com/RAJUSHANIGARAPU/self-healing-browser-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/self_healing_browser_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
